# ZENS3N

./: .cursorignore  .cursorrules  .gitignore  AGENTS.md  CURSOR_OPTIMIZATION_COMPLETE.md  DEPLOY.md  PHASE_1_COMPLETE.md  README.md  REPO.ORGANIZATION.md  STRATOS1_MANIFEST.md  add-auto-dig.sh  add-dig-feature.sh  docker-compose.yml  emergency-rollback.sh  erl_crash.dump  et --hard f2faf88  hot-reload-trickoon.sh  quick-update-commands.md  update-glyphbit.sh  verify.sh
!CITADEL.OPS/: DEPLOYMENT.PLAN.md  Raven.Gem.md  SYSTEM.VERIFICATION.REPORT.md  Welcome.md
!CMD.CENTER/: !CORE  .cursorrules
.cursor/: README.md
1n3ox-temp/: 0UT.3OX_README.md  watch-and-receipt.py
3OX.Ai/: README.md
3OX.Ai/3OX.BUILDER/vec3.core/: Cargo.toml
3OX.Ai/3OX.BUILDER/vec3.core/src/: lib.rs
BUDGET.BUILDER/: .cursorrules  README.md
CMD.OSv1/: CMD.HowTo_Info.md  CMD.System_Map.toml
CURSOR.CLEANER/: .cursorrules  README.md
DAY.0/: 3OX_AI_SAAS_MONETIZATION_PLAN.md  3OX_TOKEN_BENCHMARK.md  3OX_TOKEN_BENCHMARK.py  3OX_TOKEN_BENCHMARK.rb  3OX_TOKEN_BENCHMARK_AGENT.py  3OX_TOKEN_BENCHMARK_API.py  CRYPTO_DAY_TRADING_MASTERY.md  FINANCIAL_SNAPSHOT_CURRENT.md  MISSION_CRITICAL_BATTLE_PLAN.md  QUICK_REFERENCE_CARD.md  README.md  SPENDING_REDUCTION_TRACKER.md  START_HERE.md  WEEKLY_PROGRESS_TRACKER.md
HOLODECK/: HOWTO.md  STATUS.md
SPEC.WRITER/: .context  .cursorrules  BENCHMARK.RESULTS.md  MANTRA.md  README.md  SPEC.WRITER.AGENT.md  test-3ox.md  test-raw.md
TelePromptR/: .gitignore  AGENT.COMMUNICATION.md  COMMO.SNIP.md  INITIAL.COMMO.md  README.md  setup.3ox.proto.sh  sync.vps.sh  (+1 more)
(+2174 files in other folders)
