[package]
name = "brains-3ox-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[lib]
name = "brains_3ox_core"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

